<resources>
    <string name="app_name">ImageSearch</string>

    <string name="error_msg">Something went wrong, could not load images.</string>
    <string name="error_msg_timeout">Network timeout</string>
    <string name="error_msg_no_internet">Network not available</string>

    <string name="some_error">Some went wrong!</string>

    <string name="btn_retry">Retry</string>

    <string name="search_hint">Search images</string>
    <string name="grid_options">Grid Options</string>
    <string name="show_columns">Show columns:</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="fcm_message">Image Search</string>
    <string name="default_notification_channel_id">channelId</string>
    <string name="tripoto_image_search">Tripoto Image Search</string>
</resources>
