<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/show_columns"
        android:textColor="@color/colorBlack"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/rgColumnOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:checked="true"
            android:text="@string/two"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/colorPrimary"
            android:checked="false"
            android:text="@string/three"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/rbFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:buttonTint="@color/colorPrimary"
            android:checked="false"
            android:text="@string/four"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

    </RadioGroup>

</LinearLayout>